--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dash-table==4.6.0
 Flask==1.1.1
 Flask-Compress==1.4.0
 future==0.18.2
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
