--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,11 @@ gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
+numpy==1.18.1
+pandas==0.25.3
 plotly==4.4.1
+python-dateutil==2.8.1
+pytz==2019.3
 redis==3.3.11
 retrying==1.3.3
 rq==1.2.0
